# spdlog_learning

./: CMakeLists.txt
src/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
